<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainFragment">

    <LinearLayout
        android:id="@+id/viewLinearContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/postFromServerokHttp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/okhttp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/postFromServerService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/postFromServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fromServer" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/latEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shirota"
            android:inputType="numberDecimal" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/lonEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dolgota"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/nameCity"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/temp" />

        <TextView
            android:id="@+id/windSpeed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/wendSpeed" />

        <TextView
            android:id="@+id/typeOfWeather"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/typWeathr" />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"/>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#12000000"
        android:visibility="gone"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</LinearLayout>